[gd_scene load_steps=4 format=3 uid="uid://c45e5sxies4ac"]

[ext_resource type="Script" path="res://scenes/touch_manager/normal_touch/normal_touch.gd" id="1_u8l8g"]
[ext_resource type="Texture2D" uid="uid://bq8f3316p327" path="res://icon.svg" id="2_un2y3"]

[sub_resource type="CircleShape2D" id="CircleShape2D_31g3u"]
radius = 11.0

[node name="NormalTouch" type="Area2D"]
script = ExtResource("1_u8l8g")
coodown_time = 0.1

[node name="Flash" type="Sprite2D" parent="."]
position = Vector2(3.57628e-07, -4.47035e-07)
scale = Vector2(0.140625, 0.125)
texture = ExtResource("2_un2y3")

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_31g3u")

[node name="StartTimer" type="Timer" parent="."]
process_callback = 0
wait_time = 0.05
one_shot = true
autostart = true

[node name="LifeSpanTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="LifeSpanTimer" to="." method="_on_life_span_timer_timeout"]
